# Otus

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
django_ecommerce/: Dockerfile  entrypoint.sh  pyproject.toml
django_ecommerce/django_ecommerce/: settings.py  urls.py
django_ecommerce/main/: admin.py  forms.py  models.py  tests.py  tests_views.py  urls.py  views.py
django_ecommerce/main/management/commands/: create_users.py  fill_db.py  remove_from_db.py
django_ecommerce/main/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_slug.py  0004_auto_20210720_1346.py  0005_auto_20210720_1349.py  0006_address.py  0007_auto_20210818_1439.py  0008_auto_20210824_0832.py  0009_order_payment.py  0010_auto_20210825_1703.py  0011_auto_20210825_1745.py  0012_auto_20210825_1807.py  0013_auto_20210825_1939.py
django_ecommerce/main/templates/products/: categories.html  category_detail.html  product_detail.html  products.html  vendor_detail.html  vendors.html
django_ecommerce/main/templatetags/: cart_template_tags.py
django_ecommerce/templates/: base.html  checkout.html  navmenu.html  order_snippet.html  order_summary.html  payment.html  search_snippet.html
django_ecommerce/users/: models.py  urls.py  views.py
django_ecommerce/users/migrations/: 0001_initial.py  0002_newuser_user_order.py
homework_01/: README.md  main.py
homework_02/: README.md  base.py  car.py  plane.py
homework_03/: README.md  jsonplaceholder_requests.py  main.py  models.py
homework_04/: Dockerfile  README.md
homework_06/: README.md  (+1 more)
(+75 files in other folders)
