[tool.poetry]
name = "django_ecommerce"
version = "0.1.0"
description = "Otus BasePython Project Work"
authors = ["Andrey M"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-debug-toolbar = "^3.2.1"
Pillow = "^8.3.1"
mixer = "^7.1.2"
django-countries = "^7.2.1"
django-crispy-forms = "^1.12.0"
stripe = "^2.60.0"

[tool.poetry.dev-dependencies]
psycopg2-binary = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
